--- a/css/bw.css
+++ b/css/bw.css
@@ -1,66 +1,13 @@
 .graphics {
-    stroke-width : 1.5;
+    stroke-width : 1.75px;
     stroke-linejoin : round;
     stroke-linecap  : round;    
     font-family : sans-serif;
     font-style : italic;
-    font-size : 11px;
-}
-
-/* listPlot */
-
-
-.listPlot .area {
-    fill : url(#h1);
-}
-
-.listPlot .line {
-    stroke : navy;
-}
-
-.points {
-    stroke : white;
-    stroke-width : 1;
-    stroke-opacity : 0.5;
-    fill : navy;
-}
-
-.needles {
-    stroke : darkorange;
-    stroke-width : 1.5;
-    stroke-opacity : 1;
-}
-
-.listPlot .A .line {
-    stroke : navy;
-}
-
-.listPlot .A .area {
-    fill : url(#h1);
-}
-
-.listPlot .B .line {
-    stroke : brown;
-}
-
-.listPlot .B .area {
-    fill : url(#h2);
-}
-
-.listPlot .A .points {
-    stroke : white;
-    stroke-width : 1;
-    fill : navy;
-}
-
-.listPlot .B .points {
-    stroke : white;
-    stroke-width : 1;
-    fill : brown;
+    font-size : 16px;
 }
 
 /* plot */
-
 
 .plot .area {
     fill : url(#h1);
@@ -70,47 +17,57 @@
     stroke : black;
 }
 
-.plot .points {
+.points {
     stroke : white;
-    stroke-width : 1;
-    stroke-opacity : 0.5;
-    fill : navy;
+    stroke-width : 1.25;
+    fill : black;
 }
 
-.A .line {
-    stroke : navy;
-    stroke-opacity : 0.75;
+.grayGrad .line {
+    stroke : black;
+}
+
+.grayGrad .area {
+    fill : black;
+    fill-opacity : 0.125;
+}
+
+.graySolid .line {
+    stroke : black;
+}
+
+.graySolid .area {
+    fill : #888;
 }
 
 .A .area {
-    fill : url(#h2);
+    fill : url(#h1);
 }
 
-.B .line {
-    stroke : brown;
-    stroke-opacity : 1;
+.A .line {
+    stroke : black;
 }
 
 .B .area {
     fill : url(#h2);
 }
 
-.D .line {
-    stroke : darkorange;
-    stroke-opacity : 1;
-}
-
-.D .area {
-    fill : url(#h2);
-}
-
-.C .line {
-    stroke : darkgreen;
-    stroke-opacity : 0.75;
+.B .line {
+    stroke : black;
+    stroke-dasharray: 5,5;
 }
 
 .C .area {
-    fill : url(#h2);
+    fill : #888;
+}
+
+.C .line {
+    stroke : black;
+}
+
+.needles {
+    stroke : black;
+    stroke-width : 1;
 }
 
 .refference {
@@ -130,7 +87,7 @@
     stroke-width : 1.25;
     font-family : sans-serif;
     font-style : italic;
-    font-size : 100%;
+    font-size : 120%;
 }
 
 .axis .label {
@@ -140,8 +97,8 @@
 /* labels */
 
 .label {
-    fill : #503;
-    font-size:80%;
+    fill : black;
+    font-size: 80%;
     font-family: 'Arial';
     font-style : italic;
 }
@@ -170,16 +127,16 @@
 /* Lorentz curve */
 
 .Lorentz .upper .area {
-    fill : orange;
+    fill : white;
 }
 
 .Lorentz .upper .line {
-    stroke : indianred;
-    stroke-width : 3;
+    stroke : black;
+    stroke-width : 2.5px;
 }
 
 .Lorentz .lower .area {
-    fill : palegreen;
+    fill : url(#h1);
 }
 
 .Lorentz .lower .line {
@@ -187,23 +144,24 @@
 }
 
 .gridLine {
-    stroke : blue;
+    stroke : #444;
     stroke-opacity:0.25;
 }
 
 .gridLineLabel {
     stroke : none;
-    fill:skyblue;
+    fill:#444;
 }
 
 
 .histogram rect {
-    stroke : none;
-    fill : darkorange;
+    stroke : black;
+    stroke-width: 1px;
+    fill : #url(#h1);
 }
 
 .histogram .stairs {
-    stroke : navy;
+    stroke : black;
 }
 
 
