--- a/css/bw.css
+++ b/css/bw.css
@@ -1,3 +1,14 @@
+@media print {
+    .pagebreak {
+	page-break-after: always;
+    } 
+
+}
+
+.pagebreak {
+    display: block;
+}
+
 .graphics {
     stroke-width : 1.75px;
     stroke-linejoin : round;
@@ -152,9 +163,10 @@
 }
 
 .gridLine {
-    stroke : black;
+    stroke : #333;
     stroke-width: 1px;
-    stroke-dasharray: 5,6;
+    stroke-opacity: 0.5;
+#    stroke-dasharray: 5,6;
 }
 
 .gridLineLabel {
@@ -216,10 +228,3 @@
     stroke-linecap  : round;    
 }
 
-.pagebreak {
-    display: block;
-}
-
-@media print {
-    .pagebreak { page-break-before: always; } /* page-break-after works, as well */
-}
