--- a/css/bw.css
+++ b/css/bw.css
@@ -87,6 +87,13 @@
     stroke-width : 0.1px;
 }
 
+.thinest .line {
+    stroke : black;
+    stroke-width : 0.1px;
+    stroke-opacity : 0.5;
+}
+
+
 .thiner .line {
     stroke : black;
     stroke-width : 1px;
@@ -277,6 +284,3 @@
     stroke-linecap  : round;    
 }
 
-.thin {
-    stroke-width: 0.1;
-}
